--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     <title>My web page</title>
   </head>
   <body>
-    Hello World! Hello again!!Hello hello hello!
+    Hello World!!
     hello 5
   </body>
 </html>
